--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-animate-on-scroll": "^1.2.1",
     "react-atv-img": "^0.1.1",
     "react-count-to": "^0.8.1",
+    "react-hamburger-menu": "0.0.4",
     "react-icons": "^2.2.5",
     "react-imation": "^0.5.3",
     "react-lazyload": "^2.2.7",
